Add conditional logic for nav based on signup/login page

--- a/frontend/src/styles/output.css
+++ b/frontend/src/styles/output.css
@@ -71,6 +71,9 @@ table {
   text-decoration: none;
   padding: 5px 10px; }
 
+.null-div {
+  display: none; }
+
 body {
   background-color: #2d2d30;
   font-family: 'Roboto', sans-serif; }
