Update splash styling

--- a/frontend/src/styles/input.scss
+++ b/frontend/src/styles/input.scss
@@ -4,7 +4,7 @@
 @import './session-form.scss';
 
 //Update URL if font changes
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy|Roboto&display=swap');
 
 body{
     background-color: rgba(27, 30, 38, 1);
