--- a/frontend/src/styles/nav.scss
+++ b/frontend/src/styles/nav.scss
@@ -1,7 +1,7 @@
 .nav-bar{
     display: flex;
     justify-content: space-between;
-    margin: 15px;
+    margin: 25px 50px;
 }
 
 .nav-right{
@@ -9,6 +9,7 @@
         color: white;
         text-decoration: none;
         span{
+            font-family: 'Luckiest Guy', cursive;
             padding: 10px;
         }
     }
@@ -23,8 +24,8 @@
     }
     .btn{
         font-size: 12px;
-        border: .5px solid rgb(15, 21, 85);
-        background:rgb(15, 21, 85);
+        border: .5px solid rgb(181, 3, 3);
+        background:rgb(181, 3, 3);
         color: white;
         border-radius: 3px;
         text-decoration: none;
