--- a/frontend/src/styles/output.css
+++ b/frontend/src/styles/output.css
@@ -2,7 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Luckiest+Guy|Roboto&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -53,11 +53,12 @@ table {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: -1; }
 
 .hero-top {
-  margin: 50px;
+  margin: 10%;
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -65,9 +66,10 @@ table {
 .hero-left {
   padding: 20px; }
   .hero-left h1 {
-    font-size: 32px; }
+    font-size: 32px;
+    font-family: 'Luckiest Guy', cursive; }
   .hero-left p {
-    font-size: 12px; }
+    font-size: 16px; }
 
 .hero-bottom {
   display: flex;
@@ -76,8 +78,8 @@ table {
   margin: 100px; }
   .hero-bottom #signup-btn {
     font-size: 12px;
-    border: 0.5px solid #0f1555;
-    background: #0f1555;
+    border: 0.5px solid #b50303;
+    background: #b50303;
     color: white;
     border-radius: 3px;
     text-decoration: none;
@@ -102,18 +104,77 @@ table {
     line-height: 25px; }
 
 .splash-main {
-  position: absolute;
-  top: 500px; }
+  width: 100vw;
+  margin-top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .splash-main h2 {
+    font-size: 28px;
+    font-family: 'Luckiest Guy', cursive; }
+  .splash-main p {
+    font-size: 16px; }
+
+.splash-primary {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2%; }
+  .splash-primary img {
+    margin: 2%; }
+  .splash-primary div {
+    margin: 2%; }
+
+.secondary-wrapper {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 2%; }
+
+.splash-secondary {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2%; }
+  .splash-secondary img {
+    margin: 2%; }
+  .splash-secondary div {
+    margin: 2%; }
+
+#join-btn {
+  font-size: 16px;
+  border: 0.5px solid #b50303;
+  background: #b50303;
+  color: white;
+  border-radius: 3px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 25px;
+  margin: 5%;
+  padding: 1.5% 5%; }
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  height: 50px; }
 
 .nav-bar {
   display: flex;
   justify-content: space-between;
-  margin: 15px; }
+  margin: 25px 50px; }
 
 .nav-right a {
   color: white;
   text-decoration: none; }
   .nav-right a span {
+    font-family: 'Luckiest Guy', cursive;
     padding: 10px; }
 
 .nav-left a {
@@ -123,8 +184,8 @@ table {
   padding: 5px 10px; }
 .nav-left .btn {
   font-size: 12px;
-  border: 0.5px solid #0f1555;
-  background: #0f1555;
+  border: 0.5px solid #b50303;
+  background: #b50303;
   color: white;
   border-radius: 3px;
   text-decoration: none;
