--- a/frontend/src/styles/input.scss
+++ b/frontend/src/styles/input.scss
@@ -4,11 +4,10 @@
 @import './session-form.scss';
 
 //Update URL if font changes
-@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy|Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 body{
     background-color: rgba(27, 30, 38, 1);
     font-family: 'Roboto', sans-serif;
     color: white;
 }
-// Merge edit
