--- a/frontend/src/styles/input.scss
+++ b/frontend/src/styles/input.scss
@@ -7,7 +7,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 body{
-    background-color: rgba(27, 30, 38, 1);
+    // background-color: rgba(27, 30, 38, 1);
+    background-color: #1d0000;
     font-family: 'Roboto', sans-serif;
     color: white;
 }
