--- a/frontend/src/styles/output.css
+++ b/frontend/src/styles/output.css
@@ -193,6 +193,9 @@ footer {
 .null-div {
   display: none; }
 
+#session-main {
+  background-color: black; }
+
 #session-nav {
   background: linear-gradient(to left, #84807d, #1b1e26);
   display: flex;
@@ -204,12 +207,15 @@ footer {
   flex-direction: row;
   width: 700px;
   align-items: center;
-  color: white; }
+  color: white;
+  width: 1111px;
+  transform: translate(16px, 0px);
+  margin-left: auto;
+  margin-right: auto; }
 
 #session-nav div.back {
   cursor: pointer;
   opacity: 0.6;
-  padding-left: 10px;
   padding-right: 10px;
   display: flex;
   align-items: center; }
@@ -219,18 +225,27 @@ footer {
 
 #session-page {
   display: flex;
+  justify-content: center;
+  background-image: url(https://i.imgur.com/aBKrTWU.gif);
+  height: 100vw;
+  background-size: contain;
+  background-repeat: no-repeat; }
+
+#gradient {
+  background: linear-gradient(rgba(255, 255, 255, 0), transparent, #1d0000 47vh);
+  width: 100%;
+  display: flex;
   justify-content: center; }
 
 .session-form-container {
   width: 1111px;
   display: flex;
-  flex-direction: column;
-  margin-top: 50px; }
+  flex-direction: column; }
 
 #session-page div.input {
-  width: 1111px;
+  width: 100%;
   display: inline-flex;
-  margin-top: 30px;
+  margin-top: 35px;
   box-shadow: 0 3px 10px 1px rgba(0, 0, 0, 0.3);
   height: 55px; }
 
@@ -253,11 +268,13 @@ footer {
   padding: 0.3em;
   /* overflow: hidden; */
   /* position: relative; */
-  width: 614px; }
+  width: 100%; }
 
 #session-page div.input-field input {
   width: 100%;
-  padding: 0 10px; }
+  padding: 0 10px;
+  font-size: 20px;
+  background-color: #fee8e8; }
 
 .title-container {
   background-color: #2D2F30;
@@ -275,8 +292,91 @@ div.bar {
   border-color: grey;
   transform: translate(1px, 13px); }
 
-body {
+.form-contents {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto; }
+
+.slider {
+  margin-right: 3px;
+  font-size: 0.8em;
+  vertical-align: text-bottom;
+  margin-bottom: 0;
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 20px; }
+
+.slider input {
+  display: none; }
+
+.slider-round {
+  border-radius: 30px;
+  background-color: #D7CEC7;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute; }
+
+.slider input:checked + .slider-round {
+  background-color: #D9B310; }
+
+.slider-round:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 13px;
+  left: 3px;
+  bottom: 2px;
   background-color: #1b1e26;
+  transition: 0.4s;
+  border-radius: 50%; }
+
+.slider input:checked + .slider-round:before {
+  transform: translateX(calc(100% - 3px)); }
+
+.remember {
+  margin-top: 45px; }
+
+.fit-to-width {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column; }
+
+.session-submit {
+  background-color: #2D2F30;
+  color: white;
+  min-height: 2.9em;
+  font-size: 20px; }
+
+hr {
+  width: 100%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-top-color: #707070; }
+
+.link-to-signup-container {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row; }
+
+.link-to-signup-container a {
+  text-decoration: none;
+  color: #e84242;
+  cursor: pointer;
+  transition: all 0.25s;
+  font-size: 20px; }
+
+.link-to-signup-container a:hover {
+  color: #d9b310;
+  font-size: 22px; }
+
+body {
+  background-color: #1d0000;
   font-family: 'Roboto', sans-serif;
   color: white; }
 
