--- a/frontend/src/assets/styles/nav.scss
+++ b/frontend/src/assets/styles/nav.scss
@@ -6,6 +6,7 @@
 
 .nav-right{
     a{
+        font-family: 'Luckiest Guy', cursive;
         color: white;
         text-decoration: none;
         span{
@@ -23,8 +24,8 @@
     }
     .btn{
         font-size: 12px;
-        border: .5px solid rgb(15, 21, 85);
-        background:rgb(15, 21, 85);
+        border: .5px solid rgb(181, 3, 3);;
+        background:rgb(181, 3, 3);;
         color: white;
         border-radius: 3px;
         text-decoration: none;
