--- a/frontend/src/assets/styles/input.scss
+++ b/frontend/src/assets/styles/input.scss
@@ -7,8 +7,8 @@
 @import url("https://fonts.googleapis.com/css?family=Luckiest+Guy|Roboto&display=swap");
 
 body{
-    // background-color: rgba(27, 30, 38, 1);
-    background-color: #1d0000;
+    background-color: rgb(13, 13, 13);
+    // background-color: #1d0000;
     font-family: 'Roboto', sans-serif;
     color: white;
 }
