--- a/frontend/src/assets/styles/splash.scss
+++ b/frontend/src/assets/styles/splash.scss
@@ -133,6 +133,11 @@
         padding: 1.5% 5%;
 }
 
+#join-btn:hover{
+    border: .5px solid rgb(18, 0, 0);
+    background: rgb(18, 0, 0);
+}
+
 footer{
     display: flex;
     flex-direction: column;
@@ -153,8 +158,24 @@ footer{
     animation-timing-function: ease-in-out;
 }
 
+.spin{
+    -webkit-animation:spin 60s linear infinite;
+    -moz-animation:spin 60s linear infinite;
+    animation:spin 60s linear infinite;
+}
+
 @keyframes bobbing {
     from { transform: translate(0, 0px) };
     50% { transform: translate(0, 15px) };
     to { transform: translate(0, -0px) };
+}
+
+@-moz-keyframes spin { 
+    100% { -moz-transform: rotate(360deg); } 
+}
+@-webkit-keyframes spin { 
+    100% { -webkit-transform: rotate(360deg); } 
+}
+@keyframes spin {
+     100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } 
 }
