--- a/frontend/src/assets/styles/splash.scss
+++ b/frontend/src/assets/styles/splash.scss
@@ -42,9 +42,9 @@
     #signup-btn{
         font-size: 12px;
         border: .5px solid rgb(181, 3, 3);
+        border-radius: 7px;
         background:rgb(181, 3, 3);
         color: white;
-        border-radius: 3px;
         text-decoration: none;
         padding: 5px 10px;
         width: 100px;
@@ -53,12 +53,16 @@
         text-align: center;
         line-height: 25px;
     }
+    #signup-btn:hover{
+        border: .5px solid white;
+        background:rgba(13, 13, 13, .75);
+    }
     #browse-btn{
         font-size: 12px;
         border: .5px solid white;
+        border-radius: 7px;
         background:transparent;
         color: white;
-        border-radius: 3px;
         text-decoration: none;
         padding: 5px 10px;
         width: 100px;
@@ -66,6 +70,10 @@
         margin: 5px;
         text-align: center;
         line-height: 25px;
+    }
+    #browse-btn:hover{
+        border: .5px solid white;
+        background:rgba(13, 13, 13, .75);
     }
 }
 
@@ -123,9 +131,9 @@
 #join-btn{
         font-size: 16px;
         border: .5px solid rgb(181, 3, 3);
+        border-radius: 7px;
         background:rgb(181, 3, 3);
         color: white;
-        border-radius: 3px;
         text-decoration: none;
         text-align: center;
         line-height: 25px;
@@ -134,8 +142,8 @@
 }
 
 #join-btn:hover{
-    border: .5px solid rgb(18, 0, 0);
-    background: rgb(18, 0, 0);
+    border: .5px solid white;
+    background:rgba(13, 13, 13, .75);
 }
 
 footer{
