--- a/frontend/src/assets/styles/output.css
+++ b/frontend/src/assets/styles/output.css
@@ -393,6 +393,283 @@ hr {
   color: #d9b310;
   font-size: 22px; }
 
+#landing {
+  height: 120vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: -47px;
+  background-image: url("../../assets//public//images/landing-back-v1.png");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+#landing-hero {
+  position: relative;
+  min-height: 200px;
+  max-height: 417px;
+  height: 421px;
+  width: 70%;
+  background: lightblue;
+  margin-top: 48px;
+  overflow: hidden;
+  border-radius: 8px; }
+
+#landing-hero img {
+  height: 417px;
+  position: absolute;
+  bottom: 0;
+  right: 0; }
+
+#campaigns-content {
+  margin-top: 48px;
+  min-height: 500px;
+  width: 70%; }
+
+#campaigns-content * {
+  border-radius: 4px; }
+
+.search-bar {
+  height: 50px;
+  width: 100%;
+  background: var(--frost_trans);
+  font-size: 18px;
+  padding-left: 16px;
+  box-sizing: border-box;
+  border: 1px solid gray;
+  outline-color: var(--fuzzyRed);
+  color: lightgray; }
+
+.campaigns-index-controller {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center; }
+
+#campaign-index {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  max-height: 600px;
+  background: var(--gray_trans);
+  justify-content: center;
+  overflow-y: scroll; }
+
+#campaign-index:hover::-webkit-scrollbar-thumb {
+  background-color: #664366; }
+
+#campaign-index::-webkit-scrollbar {
+  background: transparent;
+  width: 16px;
+  height: 10px; }
+
+#campaign-index::-webkit-scrollbar-thumb {
+  height: 30px;
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 8px;
+  background-color: #423842;
+  box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05); }
+
+.campaign-index-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 224px;
+  height: 256px;
+  background: rgba(116, 116, 116, 0.4);
+  margin: 16px;
+  cursor: pointer;
+  box-sizing: border-box; }
+
+.campaign-item-contents {
+  position: relative; }
+
+.campaign-index-item img {
+  width: 100%; }
+
+.campaign-item-state {
+  position: absolute;
+  left: 0;
+  top: 0;
+  text-align: left;
+  margin: 8px 0 0 8px; }
+
+.campaign-item-players {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  text-align: left;
+  margin: 0 8px 8px 0; }
+
+.campaign-item-title {
+  line-height: 32px;
+  height: px;
+  width: 100%;
+  background: gray; }
+
+.campaign-nav-button {
+  text-align: center;
+  color: lightgray;
+  background: none;
+  border: 1px solid lightgray;
+  font-size: 18px;
+  cursor: pointer;
+  outline: none;
+  box-sizing: border-box;
+  height: 40px;
+  padding: 0 10px;
+  margin: 0 16px 0 0; }
+
+.cnb-selected {
+  background: var(--gray_trans); }
+
+#cnb-last {
+  margin-left: auto;
+  margin-right: 0; }
+
+/* ::-webkit-scrollbar {
+  background: transparent;
+  width: 16px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  height: 30px;
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 8px;
+  background-color: rgba(29,28,29,.52);
+  box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+} */
+/* @keyframes fadein {
+  from  { opacity: 0; }
+  to { opacity: 1; }
+}
+
+.fadein {
+  animation-name: fadein;
+  animation-duration: 500ms;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+} */
+:root {
+  --frost_trans: rgba(255, 255, 255, 0.1);
+  --gray_trans: rgba(255, 255, 255, 0.05);
+  --fuzzyRed: rgb(168, 113, 113);
+  --verboseRed: rgb(181, 3, 3);
+  --verboseRed_trans: rgba(181, 3, 3, 0.2); }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  /* background-color: rgba(0,0,0,0.4); */ }
+
+.btn-glow {
+  transition: all 0.2s ease-in-out; }
+
+.btn-glow:hover {
+  border: 1px solid var(--fuzzyRed);
+  box-shadow: 0 0 8px 4px rgba(0, 0, 100, 0.2), 0 0 12px 8px var(--verboseRed_trans);
+  background: var(--frost_trans); }
+
+.campaign_form_container {
+  background-image: url("../../assets//public//images/landing-back-v1.png");
+  height: 120vh; }
+
+.campaign-form {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 0 auto; }
+
+.campaign-form input {
+  height: 50px; }
+
+.upload_cover_art {
+  height: 20px; }
+
+#campaign-cover-art-container {
+  height: 300px;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.1); }
+
+#campaign-cover-art {
+  width: 100%; }
+
+.name-flex-container {
+  display: inline-flex; }
+
+.campaign-name-input {
+  width: 100%; }
+
+.description-flex-container {
+  display: inline-flex; }
+
+.campaign-description-input {
+  width: 100%; }
+
+.rules-flex-container {
+  display: inline-flex; }
+
+.campaign-rules-input {
+  width: 100%; }
+
+.password-flex-container {
+  display: inline-flex; }
+
+.campaign-password-input {
+  width: 100%; }
+
+.campaign-form h1 {
+  font-size: 22px; }
+
+.icon-div {
+  font-size: 20px;
+  color: #707070;
+  width: 50px;
+  align-self: center;
+  padding: 0.7em 0.3em;
+  overflow: initial;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+  background-color: #2D2F30;
+  display: flex; }
+
+.make-private-button {
+  height: 50px;
+  width: 170px;
+  border-radius: 4px;
+  background-color: #2D2F30;
+  color: white;
+  border-style: none; }
+
+.make-private-button:hover {
+  transform: scale(1.1); }
+
+.create-campaign-button {
+  height: 60px;
+  width: 200px;
+  border-radius: 4px;
+  background-color: #2D2F30;
+  color: white; }
+
+.create-campaign-button:hover {
+  transform: scale(1.1); }
+
 body {
   background-color: #1d0000;
   font-family: 'Roboto', sans-serif;
