--- a/frontend/src/assets/styles/input.scss
+++ b/frontend/src/assets/styles/input.scss
@@ -6,6 +6,7 @@
 @import './campaign.scss';
 @import "./global.scss";
 @import "./campaign_form.scss";
+@import "./character_sheet.scss";
 
 //Update URL if font changes
 @import url("https://fonts.googleapis.com/css?family=Luckiest+Guy|Roboto&display=swap");
