--- a/frontend/src/assets/styles/campaign.scss
+++ b/frontend/src/assets/styles/campaign.scss
@@ -3,6 +3,7 @@
 #campaigns-content {
   margin-top: 48px;
   min-height: 500px;
+  max-width: 1075px;
   width: 70%;
   // border: 1px solid black;
   // background: lightslategray;
@@ -35,10 +36,12 @@
 }
 
 #campaign-index {
+  margin-bottom: 100px;
   display: flex;
   flex-wrap: wrap;
   width: 100%;
   max-height: 600px;
+  min-height: 400px;
   background: var(--gray_trans);
   justify-content: center;
   overflow-y: scroll;
@@ -94,9 +97,14 @@
 }
 .campaign-item-title {
   line-height: 32px;
+  padding: 0 8px;
   height: px;
   width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   background: gray;
+  box-sizing: border-box;
 }
 
 .campaign-nav-button {
@@ -121,3 +129,8 @@
   margin-right: 0;
 }
 
+.campaigns-btn-selected {
+  border: 1px solid var(--fuzzyRed);
+  box-shadow: 0 0 8px 4px rgba(0, 0, 100, 0.2), 0 0 12px 8px var(--verboseRed_trans);
+  background: var(--frost_trans);
+}
