--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -1,17 +1,17 @@
-/* ::-webkit-scrollbar {
-  background: transparent;
-  width: 16px;
-  height: 10px;
-}
+// ::-webkit-scrollbar {
+//   background: transparent;
+//   width: 16px;
+//   height: 10px;
+// }
 
-::-webkit-scrollbar-thumb {
-  height: 30px;
-  border: 4px solid rgba(0, 0, 0, 0);
-  background-clip: padding-box;
-  border-radius: 8px;
-  background-color: rgba(29,28,29,.52);
-  box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
-} */
+// ::-webkit-scrollbar-thumb {
+//   height: 30px;
+//   border: 4px solid rgba(0, 0, 0, 0);
+//   background-clip: padding-box;
+//   border-radius: 8px;
+//   background-color: rgba(29,28,29,.52);
+//   box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+// }
 
 
 /* @keyframes fadein {
