--- a/frontend/src/assets/styles/landing.scss
+++ b/frontend/src/assets/styles/landing.scss
@@ -1,13 +1,12 @@
 
 
 #landing {
-  height: 120vh;
+  height: 110vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin: 0 auto;
-  margin-top: -47px;
+  // margin: 0 auto;
 
   background-image: url("../../assets//public//images/landing-back-v1.png");
   background-attachment: fixed;
@@ -42,12 +41,21 @@
 //   margin: 0 8px;
 // }
 
+// .empty-spacer-1 {
+
+//   height: 100px;
+//   width: 100%;
+//   content: "";
+//   background: red;
+//   z-index: 100;
+// }
+
 #landing-hero {
   position: relative;
   min-height: 200px;
   max-height: 417px;
-  max-width: 1074px;
   min-width: 550px;
+  max-width: 1074px;
   height: 421px;
   width: 70%;
   background: lightblue;
@@ -60,9 +68,6 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  // width: 100%;
-  // height: 421px;
-  // height: 100%
 }
 
 
