--- a/frontend/src/assets/styles/nav.scss
+++ b/frontend/src/assets/styles/nav.scss
@@ -1,7 +1,18 @@
+.nav-wrapper {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 30px;
+
+}
+
 .nav-bar{
     display: flex;
     justify-content: space-between;
     margin: 15px;
+    height: 30px;
+
 }
 
 .nav-right{
