Commit before merge

--- a/frontend/src/assets/styles/input.scss
+++ b/frontend/src/assets/styles/input.scss
@@ -7,6 +7,8 @@
 @import "./global.scss";
 @import "./campaign_form.scss";
 @import "./character_sheet.scss";
+@import "./campaign_index_item_modal.scss";
+@import "./campaign_show.scss";
 
 //Update URL if font changes
 @import url("https://fonts.googleapis.com/css?family=Luckiest+Guy|Roboto&display=swap");
