--- a/frontend/src/assets/styles/nav.scss
+++ b/frontend/src/assets/styles/nav.scss
@@ -1,4 +1,6 @@
-.nav-wrapper {
+
+
+#nav-wrapper {
     position: absolute;
     left: 0;
     top: 0;
@@ -27,6 +29,7 @@
 }
 
 .nav-left{
+    
     a{
         font-size: 12px;
         color: white;
@@ -34,6 +37,7 @@
         padding: 5px 10px;
     }
     .btn{
+        cursor: pointer;
         font-size: 12px;
         border: .5px solid rgb(181, 3, 3);;
         background:rgb(181, 3, 3);;
