--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -85,3 +85,8 @@
 @keyframes spin {
      100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } 
 }
+
+
+.upload-img{
+  padding-top: 100px;
+}
