Adds modal functionality, currently only onClick of the + New Campaign button, but it's flexible functionality so we could render all our modals this way if we wanted to. The setup needs styling, but overall it's functional.

--- a/frontend/src/assets/styles/input.scss
+++ b/frontend/src/assets/styles/input.scss
@@ -10,6 +10,8 @@
 @import "./campaign_index_item_modal.scss";
 @import "./campaign_show.scss";
 
+@import "./modal_styling.scss";
+
 //Update URL if font changes
 @import url("https://fonts.googleapis.com/css?family=Luckiest+Guy|Roboto&display=swap");
 
