--- a/frontend/src/assets/styles/campaign_show.scss
+++ b/frontend/src/assets/styles/campaign_show.scss
@@ -31,11 +31,16 @@
 
 
 #campaign-content-footer {
+  // position: relative;
   width: 100%;
   height: 256px;
-  flex-shrink: 0;
   background: rgb(30, 30, 40);
   border: 1px solid gray;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  flex-shrink: 0;
 }
 // #campaign-command {
 //   width: 100%;
@@ -44,10 +49,77 @@
 //   height: 400px;
 //   background: lightcyan;
 // }
-
-:root {
-  --campaignFooterHeight: 400px;
+.message-btns {
+  display: flex;
+  justify-content: flex-end;
 }
+.message-btn {
+  outline: none;
+  cursor: pointer;
+  color: white;
+  background: none;
+  width: 80px;
+  padding: 8px;
+  margin: 0 8px 8px 0;
+  border-radius: 4px;
+  border: 2px solid gray;
+}
+.message-form {
+  // box-sizing: border-box;
+  margin: 16px;
+  min-height: 50px;
+}
+.message-form textarea {
+  padding-top: 9px;
+  outline: none;
+  resize: none;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  border-radius: 6px;
+  border: 2px solid gray;
+  padding-left: 10px;
+  line-height: 1.46667;
+  font-size: 15px;
+}
+.chat {
+  background: white;
+}
+#chat {
+  display: none;
+}
+.say {
+  color: black;
+  background: lightgray;
+}
+#say {
+  display: none;
+}
+.describe {
+  color: white;
+  background: gray;
+}
+#describe {
+  color: white;
+  display: none;
+}
+.dm {
+  color: white;
+  background: darkgray;
+}
+#dm {
+  display: none;
+}
+
+// .chat {
+//   background: white;
+// }
+// #messages-form {
+//   box-sizing: border-box;
+//   height: 100%;
+//   padding: 0 20px 20px 20px;
+
+// }
 
 
 
