--- a/frontend/src/assets/styles/nav.scss
+++ b/frontend/src/assets/styles/nav.scss
@@ -17,7 +17,7 @@
 
 }
 
-.nav-right{
+.nav-left{
     a{
         font-family: 'Luckiest Guy', cursive;
         color: white;
@@ -28,23 +28,30 @@
     }
 }
 
-.nav-left{
+.nav-right{
     
-    a{
-        font-size: 12px;
+    .nav-link{
+        font-size: 17px;
         color: white;
         text-decoration: none;
         padding: 5px 10px;
     }
+    .nav-link:hover{
+        text-decoration: underline;
+    }
     .btn{
         cursor: pointer;
-        font-size: 12px;
+        font-size: 17px;
         border: .5px solid rgb(181, 3, 3);;
         background:rgb(181, 3, 3);;
         color: white;
         border-radius: 7px;
         text-decoration: none;
         padding: 5px 10px;
+    }
+    .btn:hover{
+        border: .5px solid white;
+        background:rgba(13, 13, 13, .5);
     }   
 }
 
