Start on campaign form

--- a/frontend/src/assets/styles/campaign_form.scss
+++ b/frontend/src/assets/styles/campaign_form.scss
@@ -5,7 +5,7 @@
   // margin: 0 auto;
   background-image: url("../../assets//public//images/landing-back-v1.png");
   height: 120vh;
-  
+  padding-top: 100px;
 }
 
 
