--- a/frontend/src/assets/styles/campaign_form.scss
+++ b/frontend/src/assets/styles/campaign_form.scss
@@ -4,8 +4,8 @@
   // // flex-direction: column;
   // margin: 0 auto;
   background-image: url("../../assets//public//images/landing-back-v1.png");
-  height: 120vh;
-  
+  height: 100vh;
+  animation: fadeIn 0.5s;
 }
 
 
@@ -17,22 +17,45 @@
   flex-direction: column;
   text-align: center;
   margin: 0 auto;
-  
+  height: 100%;
+}
+
+.campaign-form h1 {
+  margin-top: 20px;
 }
 
 .campaign-form input {
   height: 50px;
   // border-style: solid gray;
+  background-color: gray;
 
+  outline-color: var(--fuzzyRed);
+  color: lightgray;
 }
+
+// input[type="email"].big-dog::-webkit-input-placeholder {
+//   color: orange;
+// }
+
+.campaign-form input::-webkit-input-placeholder {
+  color: lightgray;
+}
+
+.campaign-form input[value] {
+  color: lightgray;
+  padding-left: 10px;
+}
+
 
 // .campaign-name-input {
 //   width: 80%; 
 // }
 
-.upload_cover_art {
+#upload_cover_art {
   // width: 80%;
   height: 20px; 
+  background-color: transparent;
+
 }
 
 #campaign-cover-art-container {
@@ -100,24 +123,37 @@
   width: 170px;
   border-radius: 4px;
   background-color: #2D2F30;
-  color: white;
+  color: lightgray;
   border-style: none;
+  cursor: pointer; 
 }
 
-.make-private-button:hover {
-  transform: scale(1.1);
-}
+// .make-private-button:hover {
+//   transform: scale(1.1);
+// }
 
-.create-campaign-button {
+#create-campaign-button {
   height: 60px; 
   width: 200px;
   border-radius: 4px; 
   background-color: #2D2F30;
-  color: white;
+  color: lightgray;
+  cursor: pointer; 
+  margin-bottom: 10px;
+  
 }
 
 
 
-.create-campaign-button:hover {
+#create-campaign-button:hover {
   transform: scale(1.1);
+}
+
+@keyframes fadeIn {
+	from { 
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
