--- a/frontend/src/assets/styles/nav.scss
+++ b/frontend/src/assets/styles/nav.scss
@@ -1,12 +1,12 @@
 
 
 #nav-wrapper {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: 30px;
-
+    z-index: 100;
 }
 
 .nav-bar{
