Add full messsages, real-time messaging, style edits, bug squashing

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -14,11 +14,12 @@
 }
 
 
-/* @keyframes fadein {
+@keyframes fadein {
   from  { opacity: 0; }
   to { opacity: 1; }
 }
 
+/* 
 .fadein {
   animation-name: fadein;
   animation-duration: 500ms;
