--- a/frontend/src/assets/styles/campaign_show.scss
+++ b/frontend/src/assets/styles/campaign_show.scss
@@ -3,7 +3,7 @@
   margin-top: 48px;
   display: flex;
   flex-direction: row;
-  // height: calc(100% - 48px);
+  height: calc(100vh - 48px);
   background: rgb(30, 30, 40);
 }
 
@@ -29,12 +29,12 @@
 }
 
 
-
 #campaign-content-footer {
   // position: relative;
   width: 100%;
   height: 256px;
-  background: rgb(30, 30, 40);
+  // background: rgb(30, 30, 40);
+  background: transparent;
   border: 1px solid gray;
   
   display: flex;
@@ -42,13 +42,38 @@
   justify-content: flex-end;
   flex-shrink: 0;
 }
-// #campaign-command {
-//   width: 100%;
-//   min-width: 400px;
-//   max-width: 1000px;
-//   height: 400px;
-//   background: lightcyan;
-// }
+#campaign-command {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 100%;
+  height: 100%;
+  // z-index: 1;
+  background: transparent;
+}
+#campaign-command-logo {
+  position: absolute;
+  height: 128px;
+  width: 128px;
+  top: 0;
+  right: calc(50% - 64px);
+}
+#campaign-command-logo img {
+  width: 100%;
+  height: 100%;
+}
+#command-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+
+  filter: opacity(50%);
+}
+
 .message-btns {
   display: flex;
   justify-content: flex-end;
