--- a/frontend/src/assets/styles/input.scss
+++ b/frontend/src/assets/styles/input.scss
@@ -14,6 +14,7 @@
 @import "./message_chat.scss";
 @import "./message_describe.scss";
 @import "./message_say.scss";
+@import "./dice_box_modal.scss";
 
 
 @import "./modal_styling.scss";
