--- a/frontend/src/assets/styles/campaign_show.scss
+++ b/frontend/src/assets/styles/campaign_show.scss
@@ -28,7 +28,6 @@
   height: 100%;
 }
 
-
 #campaign-content-footer {
   // position: relative;
   width: 100%;
@@ -58,6 +57,7 @@
   width: 128px;
   top: 0;
   right: calc(50% - 64px);
+  z-index: 0;
 }
 #campaign-command-logo img {
   width: 100%;
@@ -76,7 +76,12 @@
 
 .message-btns {
   display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: flex-end;
+  margin-bottom: 16px;
+  // margin-right: 32px;
+  z-index: 2;
 }
 .message-btn {
   outline: none;
@@ -89,6 +94,13 @@
   border-radius: 4px;
   border: 2px solid gray;
 }
+.message-btn-icons {
+  font-size: 24px;
+  margin: 0 16px 8px 16px;
+  cursor: pointer; 
+}
+
+
 .message-form {
   // box-sizing: border-box;
   margin: 16px;
@@ -134,6 +146,10 @@
 }
 #dm {
   display: none;
+}
+#subscribe {
+  margin-right: auto;
+  margin-left: 16px;
 }
 
 // .chat {
