--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -14,6 +14,7 @@
 }
 
 
+
 @keyframes fadein {
   from  { opacity: 0; }
   to { opacity: 1; }
@@ -57,6 +58,15 @@
   box-shadow: 0 0 8px 4px rgba(0, 0, 100, 0.2), 0 0 12px 8px var(--verboseRed_trans);
   background: var(--frost_trans);
 }
+.icon-btn-red {
+  color: gray;
+  transition: all 0.2s ease-in-out;
+}
+.icon-btn-red:hover {
+  color: white;
+  filter: drop-shadow( 0 0 12px rgb(255, 3, 3)), ;
+}
+
 
 .bobbing {
     animation-name: bobbing;
