--- a/frontend/src/assets/styles/message.scss
+++ b/frontend/src/assets/styles/message.scss
@@ -9,12 +9,11 @@
 
 
 .message-item {
-  height: 100%;
+  // height: 100%;
   // min-height: 50px;
   width: 90%;
-  margin: 10px 0;
-  border: 1px solid white;
-};
+  margin: 12px 0;
+}
 .message-character-name {
   font-size: 18px;
   font-weight: bold;
@@ -34,13 +33,22 @@
 .message-body {
   border-radius: 8px;
   background: white;
-  margin: 4px;
-  min-height: 48px;
 }
 .message-body-text {
+  // font-family: 'Tinos', serif;
+  font-size: 16px;
   color: black;
-  box-sizing: border-box;
-  padding: 8px 20px;;
-  min-height: 48px;
   text-align: left;
+  line-height: 1.25;
+  padding: 14px 8px;
+
+}
+
+
+.message-say .message-body {
+  background: rgb(133, 49, 49);
+}
+.message-describe .message-body {
+  background: #40464b;
+  color: white;
 }
