--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -35,6 +35,12 @@
   --fuzzyRed: rgb(168, 113, 113);
   --verboseRed: rgb(181, 3, 3);
   --verboseRed_trans: rgba(181, 3, 3, 0.2);
+
+  --describe-color: #d7cec7;
+  --describe-back: #40464b;
+  --say-color: #1b1e26;
+  --dice-back: #d6caca;
+  --dice-color: rgb(241, 121, 123);
 }
 
 .modal {
