--- a/frontend/src/assets/styles/modal_styling.scss
+++ b/frontend/src/assets/styles/modal_styling.scss
@@ -17,3 +17,17 @@
   width: 70%;
 }
 
+#spinning {
+  width: 100px;
+  height: 100px;
+  display: block;
+  left: 7vw; 
+  position: absolute;
+  top: 50vh;
+}
+
+.spin-fast {
+    -webkit-animation:spin 0.1s linear infinite;
+    -moz-animation:spin 1s linear infinite;
+    animation:spin 1s linear infinite;
+}
