--- a/frontend/src/assets/styles/campaign_show.scss
+++ b/frontend/src/assets/styles/campaign_show.scss
@@ -15,7 +15,7 @@
 #campaign-content {
   // background: rgb(50,50,50);
   width: 100%;
-  margin: 0 5%;
+  margin: 0 10%;
 
   display: flex;
   flex-direction: column;
@@ -63,16 +63,15 @@
   width: 100%;
   height: 100%;
 }
-#command-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-
-  filter: opacity(50%);
-}
+// #command-background {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   z-index: -1;
+//   // filter: opacity(50%);
+// }
 
 .message-btns {
   display: flex;
@@ -102,9 +101,12 @@
 
 
 .message-form {
-  // box-sizing: border-box;
-  margin: 16px;
-  min-height: 50px;
+  box-sizing: border-box;
+  margin: 32px 16px;
+  min-height: 56px;
+  max-height: 256px;
+  // height: 100%;
+  z-index: 1;
 }
 .message-form textarea {
   padding-top: 9px;
@@ -116,33 +118,34 @@
   border-radius: 6px;
   border: 2px solid gray;
   padding-left: 10px;
-  line-height: 1.46667;
+  line-height: 1.333;
   font-size: 15px;
 }
 .chat {
   background: white;
+  color: var(--say-color);
 }
 #chat {
   display: none;
 }
 .say {
-  color: black;
-  background: lightgray;
+  background: white;
+  color: var(--say-color);
 }
 #say {
   display: none;
 }
 .describe {
-  color: white;
-  background: gray;
+  background: var(--describe-back);
+  color: var(--describe-color);
 }
 #describe {
   color: white;
   display: none;
 }
 .dm {
-  color: white;
-  background: darkgray;
+  background: var(--describe-back);
+  color: var(--describe-color);
 }
 #dm {
   display: none;
@@ -151,6 +154,14 @@
   margin-right: auto;
   margin-left: 16px;
 }
+
+// .message-say .message-body {
+//   background: white;
+//   color: var(--say-color);
+// }
+// .message-describe .message-body {
+//   background: var(--describe-back);
+//   color: var(--describe-color);
 
 // .chat {
 //   background: white;
@@ -168,12 +179,31 @@
 // SIDE CONTENT!!!
 #campaign-extra {
   
-  background: lightcoral;
-  width: 500px;
-
+  // background: lightcoral;
+  // background: #633939;
+  background: #634848;
+  
+  transition: 0.5s;
+  
+  width: 0px;
+  overflow: hidden;
+  z-index: 100; 
 }
 // #campaign-extra-content {
 //   background: lightcoral;
 //   width: 20px;
 //   height: 500px;
 // }
+
+#open-campaign-extra {
+  position: absolute;
+  z-index: 99;
+  color: lightgray; 
+  width: 20px;
+  height: 20px;
+  right: 30px;
+  top: 45%; 
+  cursor: pointer; 
+  font-size: 22px;
+  
+}
