--- a/frontend/src/assets/styles/message.scss
+++ b/frontend/src/assets/styles/message.scss
@@ -9,8 +9,8 @@
 
 
 .message-item {
-  // height: 100%;
-  // min-height: 50px;
+  // display: flex;
+  // flex-direction: column;
   width: 90%;
   margin: 12px 0;
 }
@@ -23,6 +23,11 @@
 }
 .right {
   text-align: right;
+}
+.left-body {
+}
+.right-body {
+  margin-left: auto;
 }
 
 .message-date-time {
@@ -37,18 +42,31 @@
 .message-body-text {
   // font-family: 'Tinos', serif;
   font-size: 16px;
-  color: black;
   text-align: left;
   line-height: 1.25;
   padding: 14px 8px;
-
 }
 
 
 .message-say .message-body {
-  background: rgb(133, 49, 49);
+  background: white;
+  color: var(--say-color);
 }
 .message-describe .message-body {
-  background: #40464b;
-  color: white;
+  background: var(--describe-back);
+  color: var(--describe-color);
+}
+.message-chat .message-body{
+  background: white;
+  color: var(--say-color);
+  max-width: 156px;
+}
+
+.message-dice .message-body {
+  background: var(--dice-back);
+  color: var(--dice-color);
+  border-radius: 12px;
+}
+.message-dice .message-body-text {
+  background-image: linear-gradient(to right, #1E1E28 0%, rgb(49, 25, 25) 42%, rgb(80, 38, 39) 65%, rgb(138, 67, 68) 100%);
 }
