Precautionary pushpre·cau·tion·ar·y /prəˈkôSHəˌnerē/  Learn to pronounce git status

--- a/frontend/src/assets/styles/campaign_form.scss
+++ b/frontend/src/assets/styles/campaign_form.scss
@@ -6,6 +6,7 @@
   background-image: url("../../assets//public//images/landing-back-v1.png");
   height: 120vh;
   padding-top: 100px;
+  margin-top: 100px;
 }
 
 
