bug fixes and basic profile styling

--- a/frontend/src/assets/styles/input.scss
+++ b/frontend/src/assets/styles/input.scss
@@ -16,7 +16,7 @@
 @import "./message_say.scss";
 @import "./campaign_characters.scss";
 @import "./dice_box_modal.scss";
-
+@import "./profile.scss";
 
 @import "./modal_styling.scss";
 
