Fix css pasting issue

--- a/frontend/src/assets/styles/profile.scss
+++ b/frontend/src/assets/styles/profile.scss
@@ -220,6 +220,7 @@ div.bio-display{
 .profile-cancel:hover{
   border: .5px solid white;
   background:rgba(13, 13, 13, .75);
+}
 
 i.hat{
     color: rgb(7, 7, 210);
