--- a/frontend/src/assets/styles/profile.scss
+++ b/frontend/src/assets/styles/profile.scss
@@ -217,9 +217,11 @@ div.bio-display{
   height: 25px;
   margin: 5px;    
 }
+
 .profile-cancel:hover{
   border: .5px solid white;
   background:rgba(13, 13, 13, .75);
+}
 div.profile-main{
     display: flex;
     height: 500px;
