--- a/frontend/src/assets/styles/campaign_show.scss
+++ b/frontend/src/assets/styles/campaign_show.scss
@@ -31,8 +31,7 @@
 #campaign-content-footer {
   // position: relative;
   width: 100%;
-  height: 256px;
-  // background: rgb(30, 30, 40);
+  height: 128px; // Changes to 256px if userChar exists...
   background: transparent;
   border: 1px solid gray;
   border-bottom: 8px solid gray;
@@ -42,6 +41,7 @@
   flex-direction: column;
   justify-content: flex-end;
   flex-shrink: 0;
+  transition: 500ms;
 }
 #campaign-command {
   position: relative;
@@ -65,15 +65,6 @@
   width: 100%;
   height: 100%;
 }
-// #command-background {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   z-index: -1;
-//   // filter: opacity(50%);
-// }
 
 .message-btns {
   display: flex;
